# VortexLauncher

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  main.cpp
.github/workflows/: build.yml
assets/desktop/: vortex_launcher_desktop.desktop
main/include/: vortex.h  vortex_internals.h
main/include/contents/: delete.h  install.h  interface.h  load.h
main/include/modules/: delete.h  event.h  install.h  interface.h  load.h
main/include/plugins/: delete.h  dummy_function.h  event.h  function.h  install.h  interface.h  load.h  render_instance.h  runtime.h
main/include/templates/: install.h  interface.h
main/src/: vortex.cpp
main/src/contents/: delete.cpp  install.cpp  load.cpp
main/src/modules/: event.cpp  install.cpp  interface.cpp  load.cpp
main/src/plugins/: delete.cpp  dummy_function.cpp  event.cpp  function.cpp  install.cpp  interface.cpp  load.cpp  runtime.cpp
main/src/templates/: install.cpp  load.cpp
main/src/vortex/environment/: environment.cpp
main/src/vortex/json/: dump.cpp
main/src/vortex/logger/: logger.cpp
main/src/vortex/path/: path.cpp
main/src/vortex/project/: create_project.cpp  delete_project.cpp  import_project.cpp  init_project.cpp  update_data.cpp
main/src/vortex/random/: random.cpp
main/src/vortex/session/: create.cpp  delete.cpp
main/src/vortex/utils/: utils.cpp
main/src/vortex/web/: web.cpp
script/: build.sh  change_version.sh
shipping/launcher/windows/: vortex_launcher_1.4.0.tar.gz.sha256
ui/launcher/: CMakeLists.txt  launcher.hpp
ui/launcher/assets/resources/locales/: DA.json  DE.json  EN.json  ES.json  FI.json  FR.json  IT.json  PT.json  SV.json  en.json  es.json  fr.json
ui/launcher/assets/ressources/locales/: fr.json
ui/launcher/src/: utils.hpp
ui/launcher/src/instances/asset_finder/: asset_finder.cpp  asset_finder.hpp
ui/launcher/src/instances/file_browser/: file_browser.cpp  file_browser.hpp
ui/launcher/src/static/about/: about.cpp  about.hpp
ui/launcher/src/static/content_manager/: content_manager.cpp  content_manager.hpp  content_manager_old_cpp  content_manager_old_hpp
ui/launcher/src/static/download_center/: download_center.cpp  download_center.hpp  download_center_cpp_old  download_center_hpp_old
ui/launcher/src/static/logic_content_manager/: logic_content_manager.cpp  logic_content_manager.hpp  logic_content_manager_old  logic_content_manager_oldc
ui/launcher/src/static/logs/: logs.cpp  logs.hpp
ui/launcher/src/static/main_settings/: main_settings.cpp  main_settings.hpp  main_settings_cpp_old  main_settings_hpp_old
ui/launcher/src/static/project_manager/: project_manager.cpp  project_manager.hpp  project_manager.hppo
ui/launcher/src/static/projects/: projects.cpp  projects.hpp
ui/launcher/src/static/system_settings/: system_settings.cpp  system_settings.hpp
ui/launcher/src/static/version_manager/: version_manager.cpp  version_manager.hpp  version_manager_hpp_old
ui/launcher/src/static/welcome/: welcome.cpp  welcome.hpp
